Add short description for building the project.